# code-complexity-analyzer

./: .gitignore  README.md  backend.py  requirements.txt  test_concurrent.py
backend/: .env.example  .gitignore  README.md  index.py  pyproject.toml  requirements.txt  response.json  response_no_code.json  response_style.json  server.py  test_analysis.py  vercel.json
backend/app/: __init__.py  config.py  gemini_provider.py  main.py  models.py  system_instruction.py
core/: __init__.py  analyzer.py  models.py  prompts.py
frontend/: .env.example  App.tsx  constants.ts  index.css  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  types.ts  vite.config.ts
frontend/components/: DashboardView.tsx  EditorView.tsx
frontend/services/: geminiService.ts  storageService.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DashboardView.tsx  EditorView.tsx  LandingPage.tsx  ModernMonacoEditor.tsx
frontend/src/services/: apiService.ts
frontend/src/utils/: detectLanguage.ts
providers/: groq_provider.py
