[project]
name = "codalyzer-backend"
version = "2.0.0"
description = "AI-powered code complexity analyzer backend"
readme = "API.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "google-genai>=1.63.0",
    "redis[hiredis]>=7.2.0",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
]